Cleanup to avoid eclipse warnings (unused imports and deprecation warnings)